--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "superagent": "^3.8.3"
   }
 }
